[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mars_frost"
version = "0.1.0"
description = "Tools for analysing Mars Frost dataset"
authors = [
    {name = "Ben Kaye", email = "kaye@robots.ox.ac.uk"}
]
dependencies = [
    "numpy",
    "matplotlib",
    "shapely",
    "imageio",
    "omegaconf"
]
requires-python = ">=3.11"


[tool.ruff]
target-version = "py311"
